--- a/tesla_clone/styles.css
+++ b/tesla_clone/styles.css
@@ -102,10 +102,15 @@
     animation-duration: 2.5s;
 }
 
-/* @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-} */
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
 
 
 
